  - (simulate.c) Virtual blueprint objects are guaranteed to have their
      'clone' flag unset.
  - (string_spec, simulate.c) Renamed COMP_OBJ to the more intuitive
      COMPILE_OBJECT.
  - (interpret.c) Removed the stipulation that CATCH_RESERVED_COST
      must be twice as much as MASTER_RESERVED_COST, since the master
      reserve is used automatically anyway (suggested by Gnomi).

20-Feb-2006  (Lars Duening)
  - (Makefile.in) Added a dependency to create patchlevel.h, even if
      the program is made with 'make ldmud'.

20-Feb-2006  (Gnomi)
  - (comm.c) remove_interactive() clobbered the current_object, setting
      it to NULL. It is now preserved (Bug #431).
  - (interpret.c) When executing an efun closure, the tracedepth wasn't
      incremented accordingly (Bug #441).
  - (simulate.c) When executing a non-toplevel callback, the tracedepth
      should not be zeroed out (Bug #441).

08-Jan-2006  (Lars Duening)
  - (make_func.y) When parsing the func_spec file, the preprocessor
      conditionals were handled in a buffer in a no-longer existing
      stack frame. So far, we were lucky, but on a 64-bit machine
      that space was needed by the Bison parser.
  - (driver.h, smalloc.c, slaballoc.c) If the machine uses a 8-Byte
      malloc alignment (e.g. all PowerPC machines), the allocator does
      not replace the system malloc().
  - (mud/lp-245/) Since the recent change to how simul_efuns are called
      (see Bug #419), the LP-245 lib was broken. This has been corrected.

05-Dec-2005  (Lars Duening)
  - (configure, machine.h.in, config.h.in) Added a configuration check
      for SQLite3.
  - (pkg-sqlite, many files) Added SQLite support (Bug #11).

04-Dec-2005  (Gnomi)
  - (prolang.y) Private lfuns no longer hide simul-efuns.
  - (prolang.y) Private lfuns can be hidden by public functions without
      warning, ie. the former are now really invisible to inheritors. This
      also corrects a crasher with multi-level virtual inherits.